more formatting- spacing is now all correct. Working on colors.

--- a/assets/css/cust.css
+++ b/assets/css/cust.css
@@ -98,6 +98,7 @@ div.content h3 {
 
 div.content h2 {
     text-align: center;
+    color: #357fa7;
 }
 
 div.sermons  {
@@ -110,7 +111,7 @@ div.sermons  {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 200px;
+    width: 300px;
 }
 
 .videoSizer {
@@ -145,7 +146,7 @@ div.sermons  {
 
 p.verse strong {
     text-transform: uppercase;
-    color: orange;
+    color: #D77A27;
 }
 
 .centered {
